exercise-04/k8s/web-v1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-v1
  labels:
    app: web-v1
spec:
  type: NodePort
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: web-v1
